<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/headland_one"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_the_procode_lc"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:cardCornerRadius="20dp"
                app:contentPadding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView44"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:letterSpacing="0.04"
                        android:padding="4dp"
                        android:text="@string/about1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:letterSpacing="0.04"
                        android:padding="4dp"
                        android:text="@string/about2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:letterSpacing="0.04"
                        android:padding="4dp"
                        android:text="@string/about3"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:letterSpacing="0.04"
                        android:padding="4dp"
                        android:text="@string/about4"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/how_it_works"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cardCornerRadius="20dp"
                app:contentPadding="8dp"
                app:layout_constraintTop_toBottomOf="@id/textView7"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/t0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:letterSpacing="0.04"
                        android:padding="4dp"
                        android:text="@string/t0w"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                    <TextView
                        android:id="@+id/t1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:letterSpacing="0.04"
                        android:padding="4dp"
                        android:text="@string/t1w"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                    <TextView
                        android:id="@+id/t2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:letterSpacing="0.04"
                        android:padding="4dp"
                        android:text="@string/t2w"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/developer"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <androidx.cardview.widget.CardView
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/abcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:scaleType="centerCrop"
                            app:strokeWidth="1dp"
                            android:contentDescription="@string/developer_icon_image"
                            android:src="@drawable/me"
                            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:letterSpacing="0.1"
                            android:text="@string/dev_name"
                           android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:text="@string/developer_of_procode" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/abcv"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:scaleType="centerCrop"
                            app:strokeWidth="1dp"
                            android:contentDescription="@string/developer_icon_image"
                            android:src="@drawable/designer"
                            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:letterSpacing="0.1"
                            android:text="Sajal Jha"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:text="Designer of ProCode" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/abcv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>