<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout

        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
            android:scaleType="centerCrop"
            android:src="@drawable/me"
            android:layout_marginBottom="35dp"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
        <LinearLayout
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:letterSpacing="0.1"
                android:text="@string/dev_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/developer_of_procode" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/about_skills" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/social_media_links"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <GridLayout
            android:columnCount="2"
            android:useDefaultMargins="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/linkedin"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                app:cardCornerRadius="25dp"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true">

                <LinearLayout
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_marginStart="4dp"
                        android:padding="2dp"
                        android:src="@drawable/linkedin"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <TextView
                        android:layout_marginEnd="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/linkedin"
                        android:textAlignment="center" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/youtube"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                app:cardCornerRadius="25dp"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true">

                <LinearLayout
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_marginStart="4dp"
                        android:padding="2dp"
                        android:src="@drawable/youtube"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <TextView
                        android:layout_marginEnd="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/youtube"
                        android:textAlignment="center" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/github"

                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                app:cardCornerRadius="25dp"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true">

                <LinearLayout
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_marginStart="4dp"
                        android:padding="2dp"
                        android:src="?attr/icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <TextView
                        android:layout_marginEnd="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/github"
                        android:textAlignment="center" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/telegram"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                app:cardCornerRadius="25dp"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true">

                <LinearLayout
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_marginStart="4dp"
                        android:padding="2dp"
                        android:src="@drawable/telegram"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <TextView
                        android:layout_marginEnd="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/telegram"
                        android:textAlignment="center" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>

    </LinearLayout>


</LinearLayout>